# bayes-engine

./: .gitignore  .mdformat.toml  AGENTS.md  CLAUDE.md  Cargo.toml  HYPERDRIVE_SETUP.md  README.md  build-result  build.sh  docker-compose.yml  flake.nix  result  wrangler.toml
.github/: RUNNERS-QUICKSTART.md  RUNNERS.md  dependabot.yml
.github/lima/: gh-runner.yaml
.github/scripts/: manage-runners.sh  setup-runner.sh
.github/workflows/: ci-wasm-upload-poc.yml  ci.yml  cleanup-preview.yml  deploy.yml
agents/: DEPLOYMENT.md  NIX.md  TESTING.md  TOOLS.md  WORKFLOW.md
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: hyperloglog.rs  hyperloglog_demo.rs  lib.rs  messages_demo.rs  wasm_executor.rs
crates/hyperloglog/: Cargo.toml
crates/hyperloglog/src/: lib.rs
docs/: DEPLOYMENT.md  frameworks.md
e2e_tests/: Cargo.toml
e2e_tests/src/: main.rs
examples/pow-test-functions/: Cargo.toml
examples/pow-test-functions/src/: lib.rs
examples/simple-component/: Cargo.toml  README.md
examples/simple-component/src/: lib.rs
nix/: .mdformat.toml  build-client.sh  build-server.sh  build-webapp-manual.sh  build-webapp.sh  check-markdown-format.sh  check-nix-format.sh  check-nix-lint.sh  check-rust-build.sh  check-rust-clippy.sh  check-rust-fmt.sh  check-rust-test.sh  check-shellcheck.sh  pre-commit-hook.sh  process-wasm.sh  report-sizes.sh  run-e2e-tests.sh
nix/esbuild/: flake.nix
public/: index.html  style.css
server/: Cargo.toml  worker.js
server/src/: catalog.rs  hll_store.rs  lib.rs
src/: lib.rs
static/: style.css
