[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.metadata.crane]
name = "bayes-engine"

[workspace.dependencies]
dioxus = "0.6"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable full Link-Time Optimization for maximum size reduction
codegen-units = 1   # Better optimization at the cost of compile time
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing panic unwinding code
