[package]
name = "bayes-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bayes-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
num_cpus = "1.16"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"
wasmtime = "33"
