[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { workspace = true }
dioxus-web = "0.6"
wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
