[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = { workspace = true }
dioxus-web = "0.6"
dioxus-router = "0.7"
wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-storage = "0.3"
gloo-file = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["File", "HtmlInputElement"] }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmi = "0.51"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-sign-ext", "--enable-nontrapping-float-to-int"]
