[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", default-features = false, features = ["js"] }
wasm-bindgen-futures = "0.4"
base64 = "0.22"
hex = "0.4"
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = "0.10"
once_cell = "1.20"
wasmi = "1.0"
js-sys = "0.3"
