[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["d1"] }
console_error_panic_hook = "0.1"
hyperloglog = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
once_cell = "1.21"
wasmi = "1.0"
js-sys = "0.3"
wasm-bindgen = { workspace = true }
